# java-jni-cmake-example

./: CMakeLists.txt  README.md
java/: HelloWorld.java
src/cpp/: HelloWorldJNI-cpp.cpp
src/java/com/mdorier/jni/: HelloWorld.java  HelloWorldJNI.java
